--- a/list_has_cycle/.md
+++ b/list_has_cycle/.md
@@ -1,1 +1,7 @@
-* 
+# Three Method to judge whether a list has cycle
+
+## 1. Using Two Pointers
+
+## 2. Using Hashmap
+
+## 3. By Redirecting the node->next to Self
