--- a/list_has_cycle/.md
+++ b/list_has_cycle/.md
@@ -2,6 +2,20 @@
 
 ## 1. Using Two Pointers
 
+Two pointers, one is pSlow, the other is pFast.  
+The pSlow moves 1 step, the pFast moves 2 steps.  
+When pSlow is equal to pFast, there is cycle in list.  
+If pFast is nullptr, there is no cycle in list.  
+
+Time: $O(n)$
+Space: $O(1)$
+
 ## 2. Using Hashmap
 
+Time: $O(n)$
+Space: $O(n)$
+
 ## 3. By Redirecting the node->next to Self
+
+Time: $O(n)$
+Space: $O(1)$
