--- a/list_has_cycle/.md
+++ b/list_has_cycle/.md
@@ -3,10 +3,16 @@
 ## 1. Using Two Pointers
 
 Two pointers, one is pSlow, the other is pFast.  
-The pSlow moves 1 step, the pFast moves 2 steps.  
+The pSlow moves 1 step, the pFast moves 2 steps(if pFast->next is nullptr, then pFast = nullptr).  
 When pSlow is equal to pFast, there is cycle in list.  
 If pFast is nullptr, there is no cycle in list.  
+Animation:  
+When there is no cycle in list:  
+![avatar](no_cycle.gif)  
+When there has cycle in list:
+![avatar](has_cycle.gif)  
 
+Performance:  
 Time: $O(n)$
 Space: $O(1)$
 
