--- a/list_has_cycle/.md
+++ b/list_has_cycle/.md
@@ -12,6 +12,9 @@ When there is no cycle in list:
 When there has cycle in list:
 ![avatar](has_cycle.gif)  
 
+Prove:  
+
+
 Performance:  
 Time: $O(n)$
 Space: $O(1)$
