--- a/list_has_cycle/.md
+++ b/list_has_cycle/.md
@@ -12,8 +12,19 @@ When there is no cycle in list:
 When there has cycle in list:
 ![avatar](has_cycle.gif)  
 
-Prove:  
+Prove: **pFast will meet pSlow**  
+pFast is fater than pSlow, pFast will meet pSlow finally.
 
+let $v(pSlow)$ = step(s) that pSlow go ahead
+then  $v(pFast) = kt$  
+
+let $D$ = when pSlow enter cycle, how long have pFast gone from the enterance
+
+Let $d(pFast)$ = when pFast meets pSlow, how long have pFast gone
+Let $R$ = size of cycle
+
+$S + d(pFast) - d(pSlow) = nR$
+$(S + (k-1)t = nR)$
 
 Performance:  
 Time: $O(n)$
