--- a/list_has_cycle/.md
+++ b/list_has_cycle/.md
@@ -13,9 +13,9 @@ When there has cycle in list:
 ![avatar](has_cycle.gif)  
 
 Prove: **pFast will meet pSlow**  
-pFast is fater than pSlow, pFast will meet pSlow finally.
+pFast is fater than pSlow, pFast will meet pSlow finally.  
 
-let $v(pSlow)$ = step(s) that pSlow go ahead
+let $v(pSlow)$ = step(s) that pSlow go per loop  
 then  $v(pFast) = kt$  
 
 let $D$ = when pSlow enter cycle, how long have pFast gone from the enterance
@@ -27,15 +27,15 @@ $S + d(pFast) - d(pSlow) = nR$
 $(S + (k-1)t = nR)$
 
 Performance:  
-Time: $O(n)$
-Space: $O(1)$
+Time: $O(n)$  
+Space: $O(1)$  
 
 ## 2. Using Hashmap
 
-Time: $O(n)$
-Space: $O(n)$
+Time: $O(n)$  
+Space: $O(n)$  
 
 ## 3. By Redirecting the node->next to Self
 
-Time: $O(n)$
-Space: $O(1)$
+Time: $O(n)$  
+Space: $O(1)$  
